# nl2map-generalization

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md  index.html
models/exp_map_only/: classifier.joblib  classifier_meta.json  config.json  preproc.joblib
models/exp_openai_map/: classifier_meta.json  config.json  preproc.joblib
models/exp_openai_prompt_only/: classifier_meta.json  config.json  preproc.joblib
models/exp_use_map/: classifier.joblib  classifier_meta.json  config.json  preproc.joblib
models/exp_use_prompt_only/: classifier_meta.json  config.json  preproc.joblib
notebooks/: 00_setup.ipynb  01_generate_userstudy_samples.ipynb  02_clean_userstudy_prompts.ipynb  02_generate_embeddings.ipynb  03_build_training_data.ipynb  05_evaluate.ipynb  05_train_models.ipynb  Create_Map_Data_Samples_new.ipynb  MapVec_Pipeline.ipynb  evaluation.ipynb  experiments.py  generate_pairs.ipynb  map_behaviour.ipynb  map_embedding_diagnostics.xlsx  maps_embedding_sanity_check.ipynb  prompt_behaviour.ipynb  prompt_cleaning_pipeline.ipynb  responses_cleaned_v1_thresholds_known_unknown.xlsx  test.ipynb  ~$responses_cleaned_v1_thresholds_known_unknown.xlsx
notebooks/dev/: MapVec_Pipeline.ipynb  prompt_cleaning_pipeline.ipynb
src/: README.md  config.py  constants.py  types.py
src/eval/: data.py  labels.py  metrics.py  routing.py  run_experiment.py  splits.py
src/inference/: predict.py
src/param_estimation/: hybrid_param.py  mlp_param.py
src/train/: labels_and_weights.py  load_training_data.py  preprocessing.py  run_concat_features.py  (+6 more)
(+68 files in other folders)
