[project]
name = "mapvec"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "geopandas",
  "shapely>=2",
  "numpy",
  "pandas",
  "scikit-learn",
  "tensorflow-hub",
  "pyarrow",
  "kagglehub",
  "pandas-stubs==2.3.2.250926",
  "notebook>=7.4.7",
]

[tool.setuptools]
package-dir = {"" = "src"}
