[project]
name = "imgofup"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "geopandas",
  "shapely>=2",
  "numpy",
  "pandas",
  "scikit-learn",
  "pyarrow",
  "python-dotenv",
  "openai",
]

[project.optional-dependencies]
dev = [
  "notebook>=7.4.7",
  "pandas-stubs==2.3.2.250926",
]

use = [
  "tensorflow-hub",
  "kagglehub",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
